# money_bot

./: .env.template  .gitignore  Dockerfile  README.md  __main__.py  celery.py  docker-compose.yaml  loader.py  main_flower.py  pyproject.toml
buildfiles/: Dockerfile  RedisDockerfile
config_data/: config.py
database/: database.py  model.py  states.py
files/: dump_file.py
flowers/: bot_app.py  config.py  loader_flower.py  main_flower.py
flowers/database/: first_create.py  model.py  states.py  static_models.py
flowers/database/queries/: query.py
flowers/handlers_fl/: __init__.py  echo.py  info_group.py  refresh.py  start.py
flowers/keyboards/: main_kb.py
functions/: __init__.py  calendar_types.py  commands.py  functions.py  graphics.py  simple_calendar.py
handlers/custom_heandlers/: __init__.py  exceptions.py  history.py  settings.py  transaction.py
handlers/default_heandlers/: echo.py  help.py  start.py
keyboards/: inline_keyboards.py  reply_keyboards.py
nginx/conf.d/: fastapi.conf
